# bis

./: .dockerignore  .env.example  .gitignore  .rubocop.yml  .tool-versions  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Gemfile  Makefile  Procfile  README.md  Steepfile  app.json  docker-compose.yml  lefthook.yml
backend/: .dockerignore  .env.example  .gitignore  .rubocop.yml  Dockerfile  Dockerfile.dev  Gemfile  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_GUIDE.md  QUEUE_OPTIMIZATION.md  TEST_VALIDATION_SUMMARY.md  docker-compose.prod.yml  pyproject.toml  rspec_failures.txt
backend/app/core/: config.py  db.py  redis_client.py
backend/app/jobs/: application_job.rb  import_pvp_leaderboard_snapshot_job.rb  sync_current_pvp_season_leaderboards_job.rb  sync_pvp_character_job.rb  sync_pvp_leaderboard_job.rb
backend/app/lib/: batch_outcome.rb
backend/app/models/: __init__.py  character.rb  character_item.rb  character_talent.rb  enchantment.rb  item.rb  item_translation.rb  pvp_leaderboard.rb  pvp_leaderboard_entry.rb  pvp_leaderboard_entry_item.rb  pvp_meta_enchant_popularity.rb  pvp_meta_gem_popularity.rb  pvp_meta_hero_tree.rb  pvp_meta_item_popularity.rb  pvp_meta_talent_build.rb  pvp_meta_talent_pick.rb  pvp_season.py  pvp_season.rb  pvp_sync_cycle.rb  talent.rb  translation.rb
backend/app/services/: blizzard.rb  job_performance_monitor.rb
backend/config/: application.rb  boot.rb  credentials.yml.enc  database.yml  deploy.yml  queue.yml  routes.rb
backend/config/credentials/: development.yml.enc
backend/config/environments/: development.rb
backend/config/initializers/: amazing_print.rb  avo.rb  cache_store_safeguard.rb  oj.rb  session_store.rb
backend/db/: cache_schema.rb  queue_schema.rb  queue_schema_cache.yml  schema.rb  schema_cache.yml  seeds.rb
backend/etl/: main.py  scheduler.py
backend/infra/db/: env.py
backend/sig/: sync_pvp_character_job.rbs
backend/spec/: rails_helper.rb  spec_helper.rb
backend/tests/: conftest.py
(+563 files in other folders)
