[tool.poetry]
name = "wow-bis-backend"
version = "0.1.0"
description = ""
authors = ["alessandro <par_214@hotmail.com>"]
readme = "README.md"
packages = [{ include = "app" }, { include = "etl" }]

[tool.poetry.dependencies]
# Tip: if anything breaks on 3.13, pin to 3.12: python = "^3.12"
python = ">=3.13,<3.14"
fastapi = "^0.117.1"
uvicorn = { version = "^0.37.0", extras = ["standard"] }
sqlmodel = "^0.0.25"
psycopg = { version = "^3.2.10", extras = ["binary"] }
redis = "^5.0.0"
httpx = "^0.28.1"
apscheduler = "^3.11.0"
pydantic-settings = "^2.11.0"
python-dotenv = "^1.1.1"
orjson = "^3.11.3"

# Note: aioredis is deprecated and merged into redis>=4.
# Remove aioredis from your deps.

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
ruff = "^0.13.1"
black = "^25.9.0"
mypy = "^1.18.2"
alembic = "^1.16.5"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
